LPD-90670 refactor: rename and simplify